src/objects/sked_Offer__c.object
<CustomObject>
    <fields>
        <fullName>sked_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Care Plan</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Offers</relationshipLabel>
        <relationshipName>sked_Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked_Date_Approved__c</fullName>
        <label>Date Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sked_Date_Declined__c</fullName>
        <label>Date Declined</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sked_Date_Sent__c</fullName>
        <label>Date Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sked_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sked_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sked_Is_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked_Offer_Confirmation_Email_Content__c</fullName>
        <label>Offer Confirmation Email Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>sked_Offer_Email_Content__c</fullName>
        <label>Offer Email Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>sked_Sent_to_Emails__c</fullName>
        <label>Sent to Emails</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sked_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sked_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stopped</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Offer</label>
    <nameField>
        <displayFormat>O-{000000}</displayFormat>
        <label>Offer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>